--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
                 <p>71cc/h</p>
                 <p>m+m/2 : 105cc/h</p>
             </div>
-            <h1>Cómo se calcular?</h1>
-            <ul>
-                <li>De 0kg a 10kg, se calcula 100cc por cada kilo</li>
-                <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg</li>
-                <li>De 20kg para arriba, se suman 20cc por cada kilo adicional</li>
-            </ul>
+            <div>
+                 <h1>Cómo se calcular?</h1>
+                <ul>
+                    <li>De 0kg a 10kg, se calcula 100cc por cada kilo</li>
+                    <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg</li>
+                    <li>De 20kg para arriba, se suman 20cc por cada kilo adicional</li>
+                </ul>
+             </div>
         </div>
     </body>
 </html>
